# controld-manager-ha

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  controld-dev.code-workspace  hacs.json  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/agents/: builder.agent.md  maintainer.agent.md  strategist.agent.md
.github/workflows/: lint-validation.yaml  validate.yaml
custom_components/: __init__.py
custom_components/controld_manager/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  models.py  quality_scale.yaml  select.py  sensor.py  service_selectors.py  services.py  services.yaml  switch.py
custom_components/controld_manager/api/: __init__.py  client.py  exceptions.py
custom_components/controld_manager/helpers/: __init__.py
custom_components/controld_manager/managers/: __init__.py  base_manager.py  (+5 more)
docs/: ARCHITECTURE.md  DEVELOPMENT_STANDARDS.md  ENGINEERING_FINDINGS.md  QUALITY_REFERENCE.md  RELEASE_CHECKLIST.md  USER_GUIDE.md
plans/completed/: CONTROLD_MANAGER_BASELINE_RECOMMENDATIONS_SUP_API_DISCOVERY.md
plans/in-process/: CONTROLD_ENDPOINT_ALIAS_UPDATES_IN-PROCESS.md  CONTROLD_MANAGER_BASELINE_RECOMMENDATIONS_IN-PROCESS.md  CONTROLD_MANAGER_BASELINE_RECOMMENDATIONS_SUP_API_DISCOVERY.md  CONTROLD_MANAGER_BASELINE_RECOMMENDATIONS_SUP_BUILDER_HANDOFF.md  README.md
tests/: conftest.py
utils/: quick_lint.sh
(+8 files in other folders)
